--- a/package.json
+++ b/package.json
@@ -16,11 +16,18 @@
   },
   "homepage": "https://github.com/darshan744/SlotBookingPortalBackend#readme",
   "description": "",
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/mongoose": "^5.11.96",
+    "@types/node": "^22.9.0",
+    "typescript": "^5.6.3"
+  },
   "dependencies": {
-    "@faker-js/faker": "^9.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "mongoose": "^8.7.0"
+    "express": "^4.21.1",
+    "mongoose": "^8.8.0",
+    "ts-node": "^10.9.2"
   }
 }
