--- a/package.json
+++ b/package.json
@@ -18,16 +18,24 @@
   "homepage": "https://github.com/darshan744/SlotBookingPortalBackend#readme",
   "description": "",
   "devDependencies": {
+    "@types/connect-mongo": "^3.1.2",
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.0",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.9.0",
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
     "ts-node": "^10.9.2"
   }
