--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/express-session": "^1.18.0",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.9.0",
+    "@types/node-schedule": "^2.1.7",
     "typescript": "^5.6.3"
   },
   "dependencies": {
@@ -38,6 +39,7 @@
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
+    "node-schedule": "^2.1.1",
     "ts-node": "^10.9.2"
   }
 }
