--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.0",
     "@types/mongoose": "^5.11.96",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.9.0",
     "@types/node-schedule": "^2.1.7",
     "typescript": "^5.6.3"
@@ -39,6 +40,7 @@
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
+    "multer": "^1.4.5-lts.1",
     "node-schedule": "^2.1.1",
     "ts-node": "^10.9.2"
   }
