--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,5 @@
-{}
+{
+    "editor.fontFamily": "'JetBrains Mono', monospace",
+    // "editor.fontFamily": "'Monaspace Neon', monospace",
+    // "editor.fontLigatures": "'calt', 'liga', 'ss01', 'ss02', 'ss03', 'ss04', 'ss05', 'ss06', 'ss07', 'ss08', 'ss09'",
+}
